updated
Refactor SecurityConfig to improve CORS configuration and simplify code.